docs/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anubis-docs
spec:
  selector:
    matchLabels:
      app: anubis-docs
  template:
    metadata:
      labels:
        app: anubis-docs
    spec:
      containers:
      - name: anubis-docs
        image: ghcr.io/techarohq/anubis/docs:pr-35
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
      - name: anubis
        image: ghcr.io/techarohq/anubis:latest
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
          requests:
            cpu: 250m
            memory: 128Mi
        securityContext:
          runAsUser: 1000
          runAsGroup: 1000
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          seccompProfile:
            type: RuntimeDefault
