docs/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: anubis-docs
spec:
  selector:
    app: anubis-docs
  ports:
  - port: 80
    targetPort: 80
    name: http
  - port: 8080
    targetPort: 8080
    name: anubis
