docs/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: anubis-docs
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/limit-rps: "10"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - anubis.techaro.lol
      secretName: anubis-techaro-lol-public-tls
  rules:
    - host: anubis.techaro.lol
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: anubis-docs
                port:
                  name: anubis
